syntax = "proto3";

service Chat {
  rpc SendMessage(stream MessageRequest) returns (stream MessageResponse);
}

message MessageRequest {
  string content = 1;
}

message MessageResponse {
  string content = 1;
}